--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+  "semi": false,
+  "useTabs": true,
+  "printWidth": 100,
+  "singleQuote": true,
+	"trailingComma": true,
+  "arrowParens": "avoid"
 }
