--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "eduardo-exists",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Eduardo Escoto's Portfolio Site",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Eduardo Escoto <me@eduardo.wtf>",
   "dependencies": {
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
@@ -36,9 +36,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/eduardo-exists/eduardo.wtf.2"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/eduardo-exists/eduardo.wtf.2/issues"
   }
 }
