--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "semi": false,
-  "useTabs": true,
-  "printWidth": 100,
-  "singleQuote": true,
-	"trailingComma": true,
-  "arrowParens": "avoid"
+	"semi": false,
+	"tabWidth": 4,
+	"useTabs": true,
+	"printWidth": 100,
+	"singleQuote": true,
+	"trailingComma": "es5",
+	"arrowParens": "avoid"
 }
