--- a/package.json
+++ b/package.json
@@ -5,21 +5,50 @@
   "version": "0.1.0",
   "author": "Eduardo Escoto <me@eduardo.wtf>",
   "dependencies": {
+    "@babel/core": "^7.10.3",
+    "@mdx-js/mdx": "^1.6.6",
+    "@mdx-js/react": "^1.6.6",
+    "babel-plugin-styled-components": "^1.10.7",
+    "deepmerge": "^4.2.2",
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
+    "gatsby-plugin-google-analytics": "^2.3.6",
     "gatsby-plugin-manifest": "^2.4.13",
+    "gatsby-plugin-mdx": "^1.2.18",
+    "gatsby-plugin-mdx-prismjs": "^1.0.4",
     "gatsby-plugin-offline": "^3.2.12",
     "gatsby-plugin-react-helmet": "^3.3.5",
-    "gatsby-plugin-sharp": "^2.6.13",
+    "gatsby-plugin-root-import": "^2.0.5",
+    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-styled-components": "^3.3.6",
+    "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-remark-images": "^3.3.13",
+    "gatsby-remark-prismjs": "^3.5.6",
+    "gatsby-remark-reading-time": "^1.1.0",
+    "gatsby-remark-smartypants": "^2.3.6",
     "gatsby-source-filesystem": "^2.3.13",
+    "gatsby-theme-waves": "^0.1.6",
+    "gatsby-transformer-remark": "^2.8.19",
     "gatsby-transformer-sharp": "^2.5.6",
+    "mdx-utils": "^0.2.0",
+    "minireset.css": "^0.0.6",
+    "mjml": "^4.6.3",
+    "polished": "^3.6.5",
+    "prettier": "^2.0.5",
+    "prism-react-renderer": "^1.1.1",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.1.1",
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "babel-jest": "^26.1.0",
+    "babel-preset-gatsby": "^0.4.12",
+    "jest": "^26.1.0",
+    "react-test-renderer": "^16.13.1"
   },
   "keywords": [
     "gatsby"
